SERVER-48571 Fix invariant on batch write executor by: * Change early return logic under a transaction if a targeter error occurred * Execute baton manually to ensure unittest termination

(cherry picked from commit 27b21be87be6ca754f2c8591e7cbd71992982c4f)
(cherry picked from commit 74648046a74da68b167fbf43742f9d702b5c282d)